# werk

./: .gitignore  CHANGELOG.md  Dockerfile  LICENSE  README.md  compose.yaml  example-compose.yaml  main.py  package-lock.json  package.json  pyproject.toml  requirements.txt
.github/workflows/: conventional-release.yml  deploy-publish.yml  lint-test-app.yml  pull-request.yml
objects/: activitiy.py  exercise.py  user.py  workout.py
pages/: create_workout.py  landing.py  login.py  views_handler.py
tests/: main_test.py
utils/: db_helpers.py  general.py
